# matplotlib-cpp

./: Makefile  README.md  matplotlibcpp.h
contrib/: CMakeLists.txt
examples/: dip.cpp  fill_inbetween.cpp
